--- a/Desafios/Desafio_2/style.css
+++ b/Desafios/Desafio_2/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+
+/* import font from google fonts */
+
 * {
     margin: 0;
     padding: 0;
@@ -24,7 +27,9 @@ section:before {
     width: 100%;
     height: 500px;
     background: linear-gradient(to top, #010405, transparent);
+    /* This is a transition betwenn colors */
     z-index: 100000;
+    /* this is the third axis of the Cartesiated plan , it decides which element will be presented ahead of the others */
 }
 
 .container {
