--- a/Desafios/Desafio_4/style.css
+++ b/Desafios/Desafio_4/style.css
@@ -31,6 +31,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    /* direct a iten in x or y with % or px */
     border-radius: 50%;
     border: 15px solid rgb(255, 166, 0)
 }
